@@ -15,15 +15,6 @@
 #
 # key = value # this is ignored
 
-# -- File server --
-# Choose the file server to use. The new 'ntvfs' included
-# in samba4 or the old 's3fs' from samba3. Printers and
-# vfs plugins such recycle bin, audit or antivirus will not
-# work if you choose 'ntvfs'.
-
-# values: ntvfs | s3fs
-samba_fs = s3fs
-
 # -- Recycle Bin settings --
 
 # Name of the recycle bin directory
