@@ -1,4 +1,5 @@
 3.5
+	+ Removed samba_fs option from samba.conf, always use s3fs
 	+ Removed s4sync
 	+ Set version to 3.5
 	+ Override daemons when migrating from previous versions
